--- a/creaciones.html
+++ b/creaciones.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cambo&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <script type="module" src="./js/creaciones.js"></script>
+    <script type="module" src="./js/app.js"></script>
     <script type="module" src="./js/menu.js"></script>
 </head>
 
@@ -40,7 +40,7 @@
 </header>
 <!-- Overlay oscuro para cuando el menú está abierto -->
 <div class="menu-overlay" id="menuOverlay"></div>
-    <main>
+    <main id="swup" class="transition-fade">
         <section class="gallery-section">
             <div class="gallery-header">
                 <h1>Galería de Creaciones</h1>
@@ -63,6 +63,7 @@
 
             <div class="gallery-footer">
                 <p class="gallery-count"></p>
+                <div class="pagination"></div>
                 <div class="pagination-buttons"></div>
             </div>
         </section>
@@ -72,9 +73,9 @@
         <div>
             <div class="logo">heraceramic</div>
             <nav class="nav-footer">
-                <a href="#">Instagram</a>
+                <a href="https://www.instagram.com/hera_ceramic/">Instagram</a>
                 <a href="#">Pinterest</a>
-                <a href="#">Contacto</a>
+                <a href="./contacto.html">Contacto</a>
             </nav>
             <small>&copy; 2025 Heraceramic. Todos los derechos reservados.</small>
         </div>
