fotos ok, falta acabar formulario y más imagenes

--- a/creaciones.html
+++ b/creaciones.html
@@ -52,10 +52,9 @@
                 <button class="filter-btn active" data-filter="all">Todo</button>
                 <button class="filter-btn" data-filter="vasos">Vasos</button>
                 <button class="filter-btn" data-filter="tazas">Tazas</button>
-                <button class="filter-btn" data-filter="jarras">Jarras</button>
-                <button class="filter-btn" data-filter="platos">Platos</button>
-                <button class="filter-btn" data-filter="colecciones">Colecciones</button>
-                <button class="filter-btn" data-filter="complementos">Complementos</button>
+                <button class="filter-btn" data-filter="sets">Sets</button>
+                <button class="filter-btn" data-filter="cuencos">Cuencos</button>
+                <button class="filter-btn" data-filter="otros">Otros</button>
             </div>
 
             <div class="gallery-grid">
