--- a/sobremi.html
+++ b/sobremi.html
@@ -45,20 +45,18 @@
         <!-- Bio Section -->
         <section class="bio">
             <div class="bio-image">
-                <img src="./res/ceramistacreando.jpg" alt="María de la Hera creando cerámica">
+                <img src="./res/sobremi.jpg" alt="María de la Hera creando cerámica">
             </div>
             <div class="bio-text">
                 <div class="badge">
                     <span class="badge-dot"></span>
                     <span>LA ARTISTA</span>
                 </div>
-                <h1>Hola, soy Hera</h1>
-                <p>Mi viaje comenzó hace 5 años en un pequeño taller lleno de polvo y luz de atardecer. Lo que empezó
-                    como curiosidad frente a un torno prestado se convirtió rápidamente en mi lenguaje.</p>
-                <p>Busco la belleza en la imperfección, creando piezas que cuentan una historia de paciencia, tierra y
-                    fuego. No busco la simetría industrial, sino la huella humana que hace que cada taza, cada plato y
-                    cada jarrón sea irrepetible. Mis manos son solo herramientas que escuchan lo que el barro quiere
-                    decir.</p>
+                <h1>Hola, soy María :)</h1>
+                <p>Aquí no hay prisa ni presión: solo barro, color y la libertá de crear sin pensar demasiado.</p>
+                <p>La cerámica es mi forma de parar y estar presente, dejando que las manos hablen por mí. En cada pieza hay un momento de calma, una pausa entre el ruido del día a día.</p>
+                <p>Me gusta pensar que mis piezas tienen algo de eso: calma, imperfección y mucho cariño. Cada una nace a su ritmo, sin buscar la perfección, solo disfrutando del proceso y de lo que surge en el camino.</p>
+                <p>Si has llegado hasta aquí solo quiero que sepas que esto es un espacio donde puedo ser yo, mancharme las manos y compartir un trocito de lo que me hace feliz :) </p>
                 <div class="bio-materials">
                     <span class="material-tag">Gres de alta temperatura</span>
                     <span class="material-tag">Esmaltes naturales</span>
